[gd_scene load_steps=9 format=3 uid="uid://byqw4g3j4ipfx"]

[ext_resource type="Environment" uid="uid://bkoa6v5mymq2s" path="res://GRID_MOVEMENT/Assets/Environments/Sunset1_ENV.tres" id="1_5jgpk"]
[ext_resource type="Script" path="res://GRID_MOVEMENT/Scripts/Managers/Scene.gd" id="1_roxu6"]
[ext_resource type="MeshLibrary" uid="uid://b0tdpovnf6a3h" path="res://GRID_MOVEMENT/Assets/3D_Models/Platform1_Mesh.tres" id="3_x0xbq"]
[ext_resource type="PackedScene" uid="uid://b363vxt8gr7a3" path="res://GRID_MOVEMENT/AssetScenes/Enemy/Enemy.tscn" id="4_6iimy"]
[ext_resource type="Script" path="res://GRID_MOVEMENT/AssetScenes/Enemy/Enemy.gd" id="5_6rpj7"]
[ext_resource type="PackedScene" uid="uid://bbkurioiac2a7" path="res://GRID_MOVEMENT/AssetScenes/Marker/Marker.tscn" id="6_0mwml"]
[ext_resource type="PackedScene" uid="uid://h0mqpnjakulb" path="res://GRID_MOVEMENT/AssetScenes/Character/Character.tscn" id="7_tf6p2"]

[sub_resource type="NavigationMesh" id="NavigationMesh_sf0jq"]
vertices = PackedVector3Array(-9.5, 2.5, -11.5, -9.5, 2.5, -10.5, 9.5, 2.5, -10.5, 9.5, 2.5, -11.5, -11.5, 2.5, -9.5, -11.5, 2.5, 9.5, -10.5, 2.5, 9.5, -10.5, 2.5, -9.5, 10.5, 2.5, -9.5, 10.5, 2.5, 9.5, 11.5, 2.5, 9.5, 11.5, 2.5, -9.5, -9.25, 0.5, -9.25, -9.25, 0.75, 9.5, 9.5, 0.75, 9.5, 9.5, 0.75, -9.25, -9.5, 2.5, 10.5, -9.5, 2.5, 11.5, 9.5, 2.5, 11.5, 9.5, 2.5, 10.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1), PackedInt32Array(7, 6, 4), PackedInt32Array(4, 6, 5), PackedInt32Array(11, 10, 8), PackedInt32Array(8, 10, 9), PackedInt32Array(15, 14, 12), PackedInt32Array(12, 14, 13), PackedInt32Array(19, 18, 16), PackedInt32Array(16, 18, 17)]

[node name="Stage1Sample" type="Node3D"]
script = ExtResource("1_roxu6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_5jgpk")

[node name="Essentials" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Essentials"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 0)
shadow_enabled = true

[node name="OverheadCamera" type="Camera3D" parent="Essentials"]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 15, 10)
current = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Essentials"]
navigation_mesh = SubResource("NavigationMesh_sf0jq")

[node name="GridMap" type="GridMap" parent="Essentials/NavigationRegion3D"]
mesh_library = ExtResource("3_x0xbq")
collision_layer = 3
collision_mask = 3
data = {
"cells": PackedInt32Array(-4, 1, 0, -3, 1, 0, -1, 1, 0, -5, 1, 5, -2, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 655365, -65532, 0, 655365, -65532, 2, 655365, -65532, 3, 655365, -65532, 4, 655366, -65532, 65535, 655365, -65532, 65534, 655365, -65532, 65533, 655365, -65532, 65532, 655365, -65532, 65531, 1441798, -4, 4, 1048581, -2, 4, 1048581, -1, 4, 1048581, -65536, 4, 1048581, -65535, 4, 1048581, -65534, 4, 1048581, -65533, 4, 1048581, -3, 4, 1048581, -5, 3, 5, -5, 2, 5, -5, 0, 5, -5, 65535, 5, -5, 65534, 5, -5, 65533, 5, -5, 65532, 5, -5, 65531, 6, -65533, 65531, 1441797, -65534, 65531, 1441797, -1, 65531, 1441797, -4, 65532, 0, -4, 65533, 0, -4, 65534, 0, -4, 65535, 0, -4, 0, 0, -4, 2, 0, -4, 3, 0, -3, 3, 0, -2, 3, 0, -1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65533, 2, 0, -65534, 2, 0, -65535, 2, 0, -65536, 2, 0, -1, 2, 0, -2, 2, 0, -3, 2, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65533, 65534, 0, -65533, 65533, 0, -65533, 65532, 0, -65534, 65532, 0, -65536, 65532, 0, -1, 65532, 0, -2, 65532, 0, -3, 65532, 0, -1, 65535, 0, -2, 65535, 0, -3, 65535, 0, -3, 65534, 0, -3, 65533, 0, -2, 65533, 0, -1, 65533, 0, -65536, 65533, 0, -65535, 65534, 0, -65535, 65535, 0, -65534, 65533, 0, -65536, 65534, 0, -1, 65534, 0, -2, 65534, 0, -65536, 65535, 0, -65536, 65531, 1441797, -65535, 65531, 1441797, -65535, 65532, 0, -65535, 65533, 0, -65534, 65534, 0, -65534, 65535, 0, -65533, 65535, 0, -5, 4, 1048582, -2, 65531, 1441797, -3, 65531, 1441797, -4, 65531, 1441797, 65530, 4, 655360, 65530, 3, 655360, 65530, 2, 655360, 65530, 1, 655360, 65530, 0, 655360, 65530, 65535, 655360, 65530, 65532, 655360, 65530, 65531, 655360, 65530, 65533, 655360, 65530, 65534, 655360, 65531, 5, 655360, 65532, 5, 655360, 65533, 5, 655360, 65534, 5, 655360, 65535, 5, 655360, 0, 5, 655360, 1, 5, 655360, 3, 5, 655360, 2, 5, 655360, 4, 5, 655360, 5, 4, 655360, 5, 3, 655360, 5, 2, 655360, 5, 1, 655360, 5, 0, 655360, 5, 65535, 655360, 5, 65534, 655360, 5, 65533, 655360, 5, 65532, 655360, 5, 65531, 655360, 4, 65530, 655360, 3, 65530, 655360, 2, 65530, 655360, 1, 65530, 655360, 0, 65530, 655360, 65535, 65530, 655360, 65534, 65530, 655360, 65532, 65530, 655360, 65533, 65530, 655360, 65531, 65530, 655360)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Enemies" type="Node3D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("4_6iimy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1, 3)
script = ExtResource("5_6rpj7")

[node name="Enemy2" parent="Enemies" instance=ExtResource("4_6iimy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 1, -7)
script = ExtResource("5_6rpj7")

[node name="Enemy3" parent="Enemies" instance=ExtResource("4_6iimy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 1, 7)
script = ExtResource("5_6rpj7")

[node name="Marker" type="Node3D" parent="."]

[node name="Marker" parent="Marker" instance=ExtResource("6_0mwml")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, 1)

[node name="Characters" type="Node3D" parent="."]

[node name="Character" parent="Characters" instance=ExtResource("7_tf6p2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1, -7)

[node name="MovementUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 288.0
offset_right = 328.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="MovementUI"]
layout_mode = 2
offset_right = 450.0
offset_bottom = 75.0

[node name="HBoxContainer" type="HBoxContainer" parent="MovementUI/Panel"]
layout_mode = 0
offset_right = 450.0
offset_bottom = 76.0
alignment = 1

[node name="ConfirmDistance" type="Button" parent="MovementUI/Panel/HBoxContainer"]
layout_mode = 2
text = "Confirm Position"

[node name="VBoxContainer" type="VBoxContainer" parent="MovementUI/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="Distance" type="Label" parent="MovementUI/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Distance: 0"

[node name="ErrorHandling" type="Label" parent="MovementUI/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Too Far!"

[connection signal="body_entered" from="Enemies/Enemy" to="Enemies/Enemy" method="_on_body_entered"]
[connection signal="body_entered" from="Enemies/Enemy2" to="Enemies/Enemy2" method="_on_body_entered"]
[connection signal="body_entered" from="Enemies/Enemy3" to="Enemies/Enemy3" method="_on_body_entered"]
[connection signal="pressed" from="MovementUI/Panel/HBoxContainer/ConfirmDistance" to="." method="_on_confirm_distance_pressed"]
